actualización de la seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Sobre mí -->
     <section id="sobre-mi">
       <h2>Sobre mí</h2>
-      <p>Soy desarrollador full stack</p>
+      <p>Estudiante de la carrera Licenciatura en ciencias de la computación"</p>
       <img src="1.jpg" alt="Foto personal">
     </section>
 
