ultimos avances en la bangho

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main>
     <!-- Sección inicio -->
     <section id="inicio">
-      <h1>Inicio</h1>
+      <h2>Inicio</h2>
       <p><strong>Licenciado en ciencias de la computación</strong></p>
     </section>
 
@@ -49,7 +49,12 @@
     <!-- Contacto -->
     <section id="contacto">
       <h2>Contacto</h2>
-      <form>
+      <ul>
+        <li>Correo Electrónico <a href="malito:jotaeln.22@gmail.com">jotaeln.22@gmail.com</a></li>
+        <li>Teléfono: +54 9 0264 154-191616</li>
+        <li>LinkedIn <a href="http">miLink</a></li>
+      </ul>
+      <!-- <form>
         <label for="nombre">Correo: </label>
         <label type="email">jota@gmail.com</label>
         
@@ -57,7 +62,7 @@
         <label for="mensaje">Mensaje</label>
         <textarea id="mensaje" required></textarea>
         <button type="submit">Enviar</button>
-      </form>
+      </form> -->
     </section>
 
     <!-- Referencias -->
